--- a/pong.css
+++ b/pong.css
@@ -7,6 +7,7 @@ body {
   background-color: darkslategrey;
   margin: 0;
   padding: 0;
+  font-size: 16px;
 }
 
 #controls {
@@ -14,6 +15,26 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, calc(-240px - 200%));
+}
+
+#play {
+  font-family: 'Brush Script MT';
+  margin: 0 2em;
+  font-size: 2em;
+}
+
+.score {
+  font-family: 'Courier New';
+  font-weight: 700;
+  font-size: 2em;
+}
+
+#p1-score {
+  color: darkgoldenrod;
+}
+
+#p2-score {
+  color: mediumslateblue;
 }
 
 #table {
